--- a/ImmiCanada/ImmiCanada.csproj
+++ b/ImmiCanada/ImmiCanada.csproj
@@ -47,10 +47,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -123,6 +131,43 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImmigrationServicesController.cs" />
+    <Compile Include="Entities\ImmiCanada.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ImmiCanada.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ImmiCanada.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ImmiCanada.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ImmiCanada.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ImmigrationService.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ImmigrationServiceType.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PermanentResident.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\sp_helpdiagrams_Result.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\State.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\sysdiagram.cs">
+      <DependentUpon>ImmiCanada.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -161,6 +206,16 @@
     <Content Include="Content\images\tieuchixephang.png" />
     <Content Include="Content\images\trusochinhcuatongcongty.jpg" />
     <Content Include="Content\styles.css" />
+    <Content Include="Entities\ImmiCanada.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ImmiCanada.Context.cs</LastGenOutput>
+      <DependentUpon>ImmiCanada.edmx</DependentUpon>
+    </Content>
+    <Content Include="Entities\ImmiCanada.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ImmiCanada.edmx</DependentUpon>
+      <LastGenOutput>ImmiCanada.cs</LastGenOutput>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="Global.asax" />
@@ -193,6 +248,13 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <EntityDeploy Include="Entities\ImmiCanada.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ImmiCanada.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Entities\ImmiCanada.edmx.diagram">
+      <DependentUpon>ImmiCanada.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -299,6 +361,11 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\ImmigrationServices\Create.cshtml" />
+    <Content Include="Views\ImmigrationServices\Delete.cshtml" />
+    <Content Include="Views\ImmigrationServices\Details.cshtml" />
+    <Content Include="Views\ImmigrationServices\Edit.cshtml" />
+    <Content Include="Views\ImmigrationServices\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -314,6 +381,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
