--- a/ImmiCanada/ImmiCanada.csproj
+++ b/ImmiCanada/ImmiCanada.csproj
@@ -244,6 +244,7 @@
     <Content Include="Content\images\quyencongdan.png" />
     <Content Include="Content\images\quyenluc.png" />
     <Content Include="Content\images\ServiceBanner.jpg" />
+    <Content Include="Content\images\support-employee.jpg" />
     <Content Include="Content\images\tiepcanthitruongtoancau.png" />
     <Content Include="Content\images\tieuchixephang.png" />
     <Content Include="Content\images\trusochinhcuatongcongty.jpg" />
