--- a/ImmiCanada/ImmiCanada.csproj
+++ b/ImmiCanada/ImmiCanada.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\OccupationsController.cs" />
     <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
+    <Compile Include="Controllers\NewsInterfaceController.cs" />
     <Compile Include="Controllers\WorkInterfaceController.cs" />
     <Compile Include="Controllers\WorksController.cs" />
     <Compile Include="Entities\ImmiCanada.Context.cs">
@@ -213,9 +214,15 @@
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\images\13_suc_khoe_canada.png" />
+    <Content Include="Content\images\message.png" />
+    <Content Include="Content\images\like.png" />
+    <Content Include="Content\images\QC1.jpg" />
+    <Content Include="Content\images\QC2.jpg" />
+    <Content Include="Content\images\seen.png" />
     <Content Include="Content\images\Banner-bk.png" />
     <Content Include="Content\images\banner-homepage.png" />
     <Content Include="Content\images\Banner.jpg" />
+    <Content Include="Content\images\bannertintuc.jpg" />
     <Content Include="Content\images\businessman-showing-changes-report.jpg" />
     <Content Include="Content\images\businessman.jpg" />
     <Content Include="Content\images\chatluongcuocsong.jpg" />
@@ -267,6 +274,12 @@
     <Content Include="Content\images\thu-moi-tuyen-dung-job-offer.jpg" />
     <Content Include="Content\images\tiepcanthitruongtoancau.png" />
     <Content Include="Content\images\tieuchixephang.png" />
+    <Content Include="Content\images\tin-nhap-cu-1.jpg" />
+    <Content Include="Content\images\tin-nhap-cu-2.jpg" />
+    <Content Include="Content\images\tin-nhap-cu-3.jpg" />
+    <Content Include="Content\images\tin-nhap-cu-4.jpg" />
+    <Content Include="Content\images\tin-nhap-cu-5.jpg" />
+    <Content Include="Content\images\tin-nhap-cu-6.jpg" />
     <Content Include="Content\images\trusochinhcuatongcongty.jpg" />
     <Content Include="Content\images\uytinchuyennghiep.png" />
     <Content Include="Content\images\work-permit-banner.jpg" />
@@ -933,6 +946,17 @@
     <Content Include="Views\Positions\Delete.cshtml" />
     <Content Include="Views\Positions\Edit.cshtml" />
     <Content Include="Views\Positions\Index.cshtml" />
+    <Content Include="Views\NewsInterface\Index.cshtml" />
+    <Content Include="Views\NewsInterface\PartialNewsSubMenu.cshtml" />
+    <Content Include="Views\NewsInterface\PartialNewsIndex.cshtml" />
+    <Content Include="Views\NewsInterface\PartialNewsList.cshtml" />
+    <Content Include="Views\NewsInterface\NewsImmigration.cshtml" />
+    <Content Include="Views\NewsInterface\NewsImmigrationStory.cshtml" />
+    <Content Include="Views\NewsInterface\PartialNewsImmigrationStory.cshtml" />
+    <Content Include="Views\NewsInterface\NewsStudyAboard.cshtml" />
+    <Content Include="Views\NewsInterface\PartialNewsTravelling.cshtml" />
+    <Content Include="Views\NewsInterface\NewsTravelling.cshtml" />
+    <Content Include="Views\NewsInterface\PartialNewsStudyAboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
