--- a/ImmiCanada/ImmiCanada.csproj
+++ b/ImmiCanada/ImmiCanada.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
     <Compile Include="Controllers\NewsInterfaceController.cs" />
+    <Compile Include="Controllers\StatekInterfaceController.cs" />
     <Compile Include="Controllers\WorkInterfaceController.cs" />
     <Compile Include="Controllers\WorksController.cs" />
     <Compile Include="Entities\Creator.cs">
@@ -227,9 +228,20 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\carousel.css" />
+    <Content Include="Content\Download on the App Store.png" />
+    <Content Include="Content\Download on the CH Play.png" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\images\13_suc_khoe_canada.png" />
+    <Content Include="Content\images\banner-canada-visa.jpg" />
+    <Content Include="Content\images\Download on the App Store.png" />
+    <Content Include="Content\images\Download on the CH Play.png" />
+    <Content Include="Content\images\go-background.jpg" />
+    <Content Include="Content\images\go-logo.jpg" />
+    <Content Include="Content\images\Gold-Opportunity.jpg" />
+    <Content Include="Content\images\kss-background.jpg" />
+    <Content Include="Content\images\kss-logo.png" />
+    <Content Include="Content\images\lien-he-canada-visa.jpg" />
     <Content Include="Content\images\message.png" />
     <Content Include="Content\images\like.png" />
     <Content Include="Content\images\QC1.jpg" />
@@ -286,9 +298,21 @@
     <Content Include="Content\images\quyenluc.png" />
     <Content Include="Content\images\ServiceBanner.jpg" />
     <Content Include="Content\images\smiling-young-businessman.jpg" />
+    <Content Include="Content\images\States\Ontario\10-YorkUniversityStation.jpg" />
+    <Content Include="Content\images\States\Ontario\4-toronto-ontario-canada.jpg" />
+    <Content Include="Content\images\States\Ontario\5-Ottawa- Ontario.jpg" />
+    <Content Include="Content\images\States\Ontario\6-Mississauga- Ontario.jpg" />
+    <Content Include="Content\images\States\Ontario\7_background_ontario.jpg" />
+    <Content Include="Content\images\States\Ontario\8-university-of-toronto.jpg" />
+    <Content Include="Content\images\States\Ontario\9-university-of-waterloo.jpg" />
+    <Content Include="Content\images\States\Ontario\kinh-te-ontario.jpg" />
+    <Content Include="Content\images\States\Ontario\banner-ontario.jpg" />
+    <Content Include="Content\images\States\Ontario\map-ontario.jpg" />
+    <Content Include="Content\images\sunhouse-background.jpg" />
+    <Content Include="Content\images\sunhouse-logo.png" />
     <Content Include="Content\images\support-employee.jpg" />
     <Content Include="Content\images\thu-moi-tuyen-dung-job-offer.jpg" />
-    <Content Include="Content\images\tiepcanthitruongtoancau.png" />
+    <Content Include="Content\images\tiepcanthitruongtoancau.jpg" />
     <Content Include="Content\images\tieuchixephang.png" />
     <Content Include="Content\images\tin-nhap-cu-1.jpg" />
     <Content Include="Content\images\tin-nhap-cu-2.jpg" />
@@ -296,8 +320,23 @@
     <Content Include="Content\images\tin-nhap-cu-4.jpg" />
     <Content Include="Content\images\tin-nhap-cu-5.jpg" />
     <Content Include="Content\images\tin-nhap-cu-6.jpg" />
+    <Content Include="Content\images\top_right_hot.png" />
+    <Content Include="Content\images\toshiba-background.jpg" />
+    <Content Include="Content\images\toshiba-logo.png" />
     <Content Include="Content\images\trusochinhcuatongcongty.jpg" />
+    <Content Include="Content\images\UrbanFlags\alberta.jpg" />
+    <Content Include="Content\images\UrbanFlags\Artboard.jpg" />
+    <Content Include="Content\images\UrbanFlags\bristish-columbia.jpg" />
+    <Content Include="Content\images\UrbanFlags\manitoba.jpg" />
+    <Content Include="Content\images\UrbanFlags\new-brunswicks.jpg" />
+    <Content Include="Content\images\UrbanFlags\Newfoundland.jpg" />
+    <Content Include="Content\images\UrbanFlags\nova-scotia.jpg" />
+    <Content Include="Content\images\UrbanFlags\prince-edward-island.jpg" />
+    <Content Include="Content\images\UrbanFlags\quebec.jpg" />
+    <Content Include="Content\images\UrbanFlags\saskatchewa.jpg" />
     <Content Include="Content\images\uytinchuyennghiep.png" />
+    <Content Include="Content\images\vus-background.jpg" />
+    <Content Include="Content\images\vus-logo.png" />
     <Content Include="Content\images\work-permit-banner.jpg" />
     <Content Include="Content\pgwslider.css" />
     <Content Include="Content\pgwslider.min.css" />
@@ -981,6 +1020,11 @@
     <Content Include="Views\News\Index.cshtml" />
     <Content Include="Views\NewsInterface\Detail.cshtml" />
     <Content Include="Views\NewsInterface\PartialNewsDetail.cshtml" />
+    <Content Include="Views\Shared\_LayoutNew.cshtml" />
+    <Content Include="Views\Home\CanadaDeserveToLife.cshtml" />
+    <Content Include="Views\WorkInterface\WorkRecommended.cshtml" />
+    <Content Include="Views\StateInterface\Ontario.cshtml" />
+    <Content Include="Views\Home\SchoolList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
